components/page-level/home/index.module.css
.homePage {
  margin-left: auto;
  margin-right: auto;
  max-width: var(--container-lg);
  padding-top: 50px;
}

.tagContent {
  display: flex;
  justify-content: space-between;
}

.mobileSort {
  display: none;
}

.tagInner {
  display: flex;
  height: var(--space-32);
}

.sortSelect select {
  padding: var(--space-12) 82px var(--space-12) var(--space-16);
  background-color: var(--c-white-10);
  color: var(--c-white);
  border-radius: var(--radius-lg);
  outline: none;
}

.sortSelect select:focus {
  background-color: var(--c-white-10);
  color: var(--c-black);
}

.addContent {
  display: flex;
  justify-content: center;
  margin: var(--space-32) 0 var(--space-32) 0;
  border: 1px solid var(--c-white-10);
  padding: 46px 46px;
  border-radius: var(--radius-lg);
  cursor: pointer;
}

.addButton {
  display: flex;
  align-items: center;
}
.addButton img {
  padding: 0 var(--space-12);
}

@media (max-width: 768px) {
  .sortSelect {
    display: none;
  }
  .mobileSort span {
    font-size: var(--fs-base);
    padding-right: var(--space-24);
    line-height: 17px;
  }
  .mobileSort span:active {
    font-size: var(--fs-h3);
    font-family: var(--ff-bold);
    color: var(--c-turk);
  }
  .mobileSort {
    display: flex;
    padding-left: var(--space-36);
    padding-bottom: var(--space-24);
  }
  .tagContent {
    padding-left: var(--space-36);
    padding-bottom: var(--space-48);
  }
  .search {
    display: none;
  }
  .title {
    display: none;
  }
  .addContent {
    display: none;
  }
  .homePage {
    padding-top: var(--space-32);
  }
}

